--- a/polybar/config
+++ b/polybar/config
@@ -1,22 +1,29 @@
-;-------------------------------------------------
-;                                                ;
-;           Polybar config for my themes         ;
-; 				                 ;
-;                                                ;
-;-------------------------------------------------
+;--------------------------------;
+;								 ;
+;	polybar config by:			 ;
+;		simonzelenski			 ;
+;		aka 50M301_b			 ;
+;								 ;
+;--------------------------------;
 
 
 [colors]
-fg = #dedede
-underline = #d3d3d3
-bg = #000000ff
+
+background = #000000ff
+foreground = #ffffff
+underline = 
+
 white = #d1d1d1
-gray = #787878
 black = #1d1d1d
+lightgrey = #8A8A8A
+mediumgrey = #444444
+darkgrey = #1b1d1e
+
 red = #dd0000
 blue = #0000dd
 yellow = #dddd00
-green = #00dd00
+green = #1cfa67
+orange = #d75f00
 
 ;gradient from red to green
 r0 = #ff0000
@@ -36,56 +43,91 @@ rd = #22dd00
 re = #11ee00
 rf = #00ff00
 
-[bar/main_bar]
-bottom = true
+
+
+[bar/top_bar]
+
+bottom = false
 width = 100%
-height = 18
-offset-x = 0%
-offset-y = 0%
+height = 16
+offset-x = 0
+offset-y = 0
 radius = 0.0
 fixed-center = true
 
-background = ${colors.bg}
-foreground = ${colors.fg}
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-line-size = 1
-line-color = ${colors.underline}
+underline-size = 1
+underline-foreground = ${colors.background}
 
-border-size = 0
-border-color = ${colors.bg}
-
-padding-left = 1
-padding-right = 1
+padding-left = 0
+padding-right = 0
 
 module-margin-left = 0
-module-margin-right = 1
+module-margin-right = 0
 
-font-0 = Terminus(TTF):size=9;0
-font-1 = Material-Design-Iconic-Font:size=8;0
-font-2 = FontAwesome:size=10;0
-font-3 = Wuncon Siji:size=11;0
+font-0 = Terminus(TTF):size=9;2
+font-1 = Material-Design-Iconic-Font:size=8;2
+font-2 = FontAwesome:size=10;2
+font-3 = Wuncon Siji:size=11;2
+font-4 = PowerlineSymbols:size=16;4
 
-modules-left = i3 xwindow
-modules-center = cpu date memory
-modules-right = filesystem eth wlan volume backlight battery
+modules-left = xwindow
+modules-center = darkarrowrightinverted cpu darkarrowrightinverted2 memory lightarrowright
+modules-right = eth wlan date
 
 tray-position = right
 tray-padding = 2
-tray-transparent = true
-tray-offset-y = 0%
-tray-offset-x = 0%
-tray-maxsize = 18
+tray-transparent = false
+tray-offset-y = 0
+tray-offset-x = 0
+tray-maxsize = 22
 tray-detached = false
-tray-background = ${colors.bg}
+tray-background = ${colors.background}
 
-wm-restack = i3
-;override-redirect = true
+
+
+[bar/bottom_bar]
+
+bottom = true
+width = 100%
+height = 16
+offset-x = 0
+offset-y = 0
+radius = 0.0
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+underline-size = 1
+underline-foreground = ${colors.background}
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = Terminus(TTF):size=9;2
+font-1 = Material-Design-Iconic-Font:size=8;2
+font-2 = FontAwesome:size=10;2
+font-3 = Wuncon Siji:size=11;2
+font-4 = PowerlineSymbols:size=16;4
+
+modules-left = i3
+modules-center = music
+modules-right = filesystem volume backlight battery 
+
 
 
 [module/i3]
 type = internal/i3
+
 format = <label-mode> <label-state>
 index-sort = true
+enable-scroll = false
 
 ws-icon-0 = 1:;
 ws-icon-1 = 2:;
@@ -97,56 +139,42 @@ ws-icon-6 = 7:;
 ws-icon-7 = 8:;
 
 label-focused = %icon%
-;label-focused = 
-;label-focused = %index%
-;label-focused-background = ${colors.gray}
-label-focused-padding = 2
-label-focused-underline = ${colors.underline}
+label-focused-foreground = ${colors.green}
+label-focused-padding = 5
+label-focused-underline = ${colors.green}
 
 label-unfocused = %icon%
-;label-unfocused = 
-;label-unfocused = %index%
 label-unfocused-padding = 2
-;label-unfocused-background = ${colors.bg}
 
 label-urgent = %icon%
-;label-urgent = 
-;label-urgent = %index%
-label-urgent-background = ${colors.fg}
+label-urgent-background = ${colors.foreground}
 label-urgent-padding = 2
-label-urgent-foreground = ${colors.gray}
+label-urgent-foreground = ${colors.mediumgrey}
 
 label-visible = %icon%
-;label-visible = 
-;label-visible = %index%
-label-visible-foreground = ${colors.white}
+label-visible-foreground = ${colors.foreground}
 label-visible-padding = 2
+
+
 
 [module/date]
 type = internal/date
-interval = 5
 
+interval = 5
 date = " %d.%m.%Y  %H:%M "
 date-alt = "%A, %d %b %Y  %H:%M
-
-format-prefix-foreground = ${colors.fg}
-;format-underline = ${colors.underline}
-
 label = %date%
+label-padding = 5
+
 
 
 [module/filesystem]
 type = internal/fs
-interval = 30
+interval = 7200
 mount-0 = /home
 
 label-mounted =  %free%
-label-mounted-underline = ${colors.underline}
-label-mounted-padding = 1
-label-mounted-background = ${colors.bg}
 
-label-unmounted =
-label-unmounted-foreground = ${colors.bg}
 
 
 [module/battery]
@@ -155,18 +183,12 @@ battery = BAT0
 adapter = AC
 full-at = 99
 
-format-full-background = ${colors.bg}
+format-charging =  <animation-charging> <label-charging>
 
-format-charging-background = ${colors.bg}
-format-charging = "⁣ <animation-charging> <label-charging> "
-format-charging-underline = ${colors.yellow}
-
-format-discharging-background = ${colors.bg}
-format-discharging = "⁣ <ramp-capacity> <label-discharging> "
-format-discharging-underline = ${colors.underline}
-
-format-full-prefix-foreground = ${colors.fg}
-format-full-underline = ${self.format-charging-underline}
+time-format = %H:%M
+label-discharging = %percentage%% | %time%
+format-discharging = <ramp-capacity> <label-discharging>
+format-full-prefix-foreground = ${colors.green}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -180,14 +202,14 @@ ramp-capacity-8 = 
 ramp-capacity-9 = 
 
 ramp-capacity-0-foreground = ${colors.r0}
-ramp-capacity-1-foreground = ${colors.r1}
-ramp-capacity-2-foreground = ${colors.r2}
-ramp-capacity-3-foreground = ${colors.r3}
-ramp-capacity-4-foreground = ${colors.r4}
-ramp-capacity-5-foreground = ${colors.r5}
-ramp-capacity-6-foreground = ${colors.r7}
-ramp-capacity-7-foreground = ${colors.ra}
-ramp-capacity-8-foreground = ${colors.rc}
+ramp-capacity-1-foreground = ${colors.r2}
+ramp-capacity-2-foreground = ${colors.r4}
+ramp-capacity-3-foreground = ${colors.r6}
+ramp-capacity-4-foreground = ${colors.r9}
+ramp-capacity-5-foreground = ${colors.rb}
+ramp-capacity-6-foreground = ${colors.rc}
+ramp-capacity-7-foreground = ${colors.rd}
+ramp-capacity-8-foreground = ${colors.re}
 ramp-capacity-9-foreground = ${colors.rf}
 
 animation-charging-0 = 
@@ -201,7 +223,8 @@ animation-charging-7 = 
 animation-charging-8 = 
 animation-charging-9 = 
 animation-charging-foreground = ${colors.yellow}
-animation-charging-framerate = 750
+animation-charging-framerate = 2000
+
 
 
 [module/backlight]
@@ -224,7 +247,9 @@ bar-fill-font = 0
 bar-fill-foreground = ${colors.white}
 bar-empty = ─
 bar-empty-font = 0
-bar-empty-foreground = ${colors.gray}
+bar-empty-foreground = ${colors.lightgrey}
+
+
 
 [module/volume]
 type = internal/volume
@@ -232,7 +257,7 @@ type = internal/volume
 format-volume = <ramp-volume>  <bar-volume>
 
 label-muted =  muted
-label-muted-foreground = ${colors.fg}
+label-muted-foreground = ${colors.foreground}
 
 bar-volume-width = 12
 bar-volume-foreground-0 = ${colors.rf}
@@ -249,7 +274,7 @@ bar-volume-fill = ─
 bar-volume-fill-font = 0
 bar-volume-empty = ─
 bar-volume-empty-font = 0
-bar-volume-empty-foreground = ${colors.gray}
+bar-volume-empty-foreground = ${colors.lightgrey}
 
 ramp-volume-0 = 
 ramp-volume-1 = 
@@ -257,50 +282,54 @@ ramp-volume-2 = 
 ramp-volume-3 = 
 ramp-volume-4 = 
 ramp-volume-5 = 
-ramp-headphones-0 = 
+
 
 
 [module/wlan]
 type = internal/network
 interface = wlp5s0
-interval = 5.0
-
-format-connected-padding = 1
-format-disconnected-padding = 1
+interval = 5
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = ${colors.green}
-format-disconnected-underline = ${colors.red}
-
 label-connected = %essid%  %downspeed%  %upspeed%
+
+format-packetloss = <animation-packetloss> <label-connected>
+animation-packetloss-0 = ⚠
+animation-packetloss-0-foreground = {colors.red}
+animation-packetloss-1 = 
+animation-packetloss-1-foreground = {colors.yellow}
+animation-packetloss-framerate = 500
+
+format-disconnected-underline = ${colors.red}
 label-disconnected = 
-label-disconnected-foreground = ${colors.gray}
+label-disconnected-foreground = ${colors.darkgrey}
+
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
- 
+
 [module/eth]
 type = internal/network
 interface = enp4s0
-interval = 5.0
-
-format-connected-padding = 1
-format-disconnected-padding = 1
+interval = 5
 
 format-connected-underline = ${colors.green}
-format-disconnected-underline = ${colors.red}
-
 label-connected = @
-label-disconnected =  
-label-disconnected-foreground = ${colors.gray}
+
+format-disconnected-underline = ${colors.red}
+label-disconnected = 
+
 
 
 [module/cpu]
 type = internal/cpu
-format-label = internal/cpu
 
-;format = <label> <ramp-coreload>
 format = <ramp-coreload>
+format-background = ${colors.mediumgrey}
+format-underline = ${colors.mediumgrey}
+format-padding = 1
+interval = 2
 
 ramp-coreload-0 = ▁
 ramp-coreload-1 = ▂
@@ -311,6 +340,15 @@ ramp-coreload-5 = ▆
 ramp-coreload-6 = ▇
 ramp-coreload-7 = █
 
+;ramp-coreload-0 = 
+;ramp-coreload-1 = 
+;ramp-coreload-2 = 
+;ramp-coreload-3 = 
+;ramp-coreload-4 = 
+;ramp-coreload-5 = 
+;ramp-coreload-6 = 
+;ramp-coreload-7 = 
+
 ramp-coreload-0-foreground = ${colors.rf}
 ramp-coreload-1-foreground = ${colors.rd}
 ramp-coreload-2-foreground = ${colors.rb}
@@ -320,24 +358,13 @@ ramp-coreload-5-foreground = ${colors.r5}
 ramp-coreload-6-foreground = ${colors.r3}
 ramp-coreload-7-foreground = ${colors.r0}
 
-;ramp-coreload-underline = ${colors.underline}
-interval = 2
-label = %{F${colors.fg}  %percentage% % %{F-}
-padding = 2
 
-label-underline = ${colors.underline}
-label-background = ${colors.bg}
 
 [module/memory]
 type			= internal/memory
+
 interval		= 5
-format			= <bar-used>
-;format			= <label><bar-used>
-
-label			=  %percentage_used%%
-
-label-background	= ${colors.bg}
-label-padding		= 2
+format = <bar-used>
 
 bar-used-indicator	= 
 bar-used-width		= 8
@@ -347,58 +374,139 @@ bar-used-foreground-2	= ${colors.r5}
 bar-used-foreground-3	= ${colors.r0}
 bar-used-fill		= 
 bar-used-empty		= 
-bar-used-empty-foreground = ${colors.gray}
-bar-used-fill-background = ${colors.bg}
-bar-used-empty-background = ${colors.bg}
-
-; alternative memory display
-;[module/memory]
-;type = internal/memory
-;interval = 5
-
-;label = %{F${colors.fg}  %percentage_used% % %{F-}
-;label-underline = ${colors.underline}
-;label-foreground = ${colors.fg}
-;label-background = ${colors.bg}
+bar-used-empty-foreground = ${colors.mediumgrey}
+bar-used-fill-background = ${colors.lightgrey}
+bar-used-empty-background = ${colors.lightgrey}
 
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+
 
 
 [global/wm]
 margin-top = 5
 margin-bottom = 5
 
+
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:120:...%
-label-padding = 2
-label-maxlen = 40
-label-foreground = ${colors.fg}
+format-padding = 1
+label-maxlen = 80
+label-foreground = ${colors.foreground}
 
-[module/mpd]
-type = internal/mpd
 
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <icon-random>  <label-song>  <bar-progress>
 
-label-song-maxlen = 40
-label-song-ellipsis = true
+[module/music]
+type = custom/script
+exec = $HOME/.config/polybar/music.sh
+interval = 2.5
 
-icon-prev = 
-icon-seekb = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-icon-seekf = 
 
-icon-random = r
-icon-repeat = 
 
-toggle-on-foreground = ${colors.fg}
-toggle-off-foreground = #66
+;####################################
+;#									#
+;#				ARROWS				#
+;#									#
+;####################################
+
+[module/block]
+type = custom/text
+content = "█"
+content-background = ${colors.background}
+content-foreground = ${colors.lightgrey}
+
+[module/darkarrow]
+type = custom/text
+content = ""
+content-background = ${colors.background}
+content-foreground = ${colors.darkgrey}
+content-padding = 0
+
+[module/darkarrowright]
+type = custom/text
+content = ""
+content-background = ${colors.background}
+content-foreground = ${colors.darkgrey}
+content-padding = 0
+
+[module/darkarrowrightinverted]
+type = custom/text
+content = ""
+content-background = ${colors.mediumgrey}
+content-underline = ${colors.mediumgrey}
+content-foreground = #4C566A
+content-padding = 0
+
+[module/darkarrowrightinverted2]
+type = custom/text
+content = ""
+content-background = ${colors.lightgrey}
+content-underline = ${colors.lightgrey}
+content-foreground = ${colors.mediumgrey}
+content-padding = 0
+
+[module/lightarrow]
+type = custom/text
+content = ""
+content-background = ${colors.mediumgrey}
+content-foreground = ${colors.lightgrey}
+content-padding = 0
+
+[module/lightarrowright]
+type = custom/text
+content = ""
+content-background = ${colors.background}
+content-foreground = ${colors.lightgrey}
+content-padding = 0
+
+[module/mediumarrow]
+type = custom/text
+content = ""
+content-background = ${colors.darkgrey}
+content-foreground = ${colors.mediumgrey}
+content-padding = 0
+
+[module/mediumarrowright]
+type = custom/text
+content = ""
+content-background = ${colors.darkgrey}
+content-foreground = ${colors.mediumgrey}
+content-padding = 0
+
+[module/rightarrow]
+type = custom/text
+content = ""
+content-background = ${colors.darkgrey}
+content-foreground = ${colors.xcolor4}
+content-padding = 0
+
+[module/bluearrowright]
+type = custom/text
+content = ""
+content-background = ${colors.darkgrey}
+content-foreground = ${colors.blue}
+content-padding = 0
+
+[module/bluearrowleft]
+type = custom/text
+content = ""
+content-background = ${colors.darkgrey}
+content-foreground = ${colors.blue}
+content-padding = 0
+
+[module/orangearrowright]
+type = custom/text
+content = ""
+;content-background = ${colors.darkgrey}
+content-foreground = ${colors.orange}
+content-padding = 0
+
+[module/orangearrowleft]
+type = custom/text
+content = ""
+;content-background = ${colors.mediumgrey}
+content-foreground = ${colors.orange}
+content-padding = 0
